--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,27 +26,10 @@ jobs:
           set-safe-directory: false  # actions/checkout otherwise tries to use the wrong config file, per actions/checkout#767
           fetch-depth: 0  # Need this to push to Cygwin Git mirror
         timeout-minutes: 1
-      - name: Generate cygcheck output
-        if: always()
-        run: cygcheck -srv >/var/log/cygcheck.out
-        timeout-minutes: 5
-      - name: Store Cygwin logs
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: cygwin-logs
-          path: 'C:\cygwin\var\log\'
-        timeout-minutes: 5
       - name: Load variables from the cygport file
         run: |
-          eval "$(cygport libvterm.cygport vars BUILD_REQUIRES PVR)"
-          printf 'BUILD_REQUIRES=%s\n' "$BUILD_REQUIRES" >>"$GITHUB_ENV"
+          eval "$(cygport libvterm.cygport vars PVR)"
           printf 'PVR=%s\n' "$PVR" >>"$GITHUB_ENV"
-      - name: Install Cygwin build requirements
-        uses: cygwin/cygwin-install-action@v2
-        with:
-          packages: ${{ env.BUILD_REQUIRES }}
-        timeout-minutes: 30
       - name: Cygport download
         run: cygport libvterm.cygport download
         timeout-minutes: 5
