--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,9 @@ jobs:
         timeout-minutes: 1
       - name: Load variables from the cygport file
         run: |
-          eval "$(cygport libvterm.cygport vars PVR)"
-          printf 'PVR=%s\n' "$PVR" >>"$GITHUB_ENV"
+          eval "$(cygport libvterm.cygport vars PVR ARCH)"
+          printf 'DIST_DIR=%s\n' "libvterm-$PVR.$ARCH/dist" >>"$GITHUB_ENV"
+          printf 'DIST_ARCHIVE=%s\n' "libvterm-dist-$PVR.$ARCH.tar.xz" >>"$GITHUB_ENV"
       - name: Cygport download
         run: cygport libvterm.cygport download
         timeout-minutes: 5
@@ -45,16 +46,15 @@ jobs:
       - name: Cygport package
         run: cygport libvterm.cygport package
         timeout-minutes: 5
-      - name: Tar up build results
-        if: always()
-        run: tar -caf libvterm-build-results.txz libvterm-*-*.*/
-        timeout-minutes: 10
+      - name: Tar up dist directory
+        run: |
+          cd "$DIST_DIR"
+          tar -cJvaf "$DIST_ARCHIVE" */
       - name: Store build results
-        if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: build-results
-          path: libvterm-build-results.txz
+          name: ${{ env.DIST_ARCHIVE }}
+          path: ${{ env.DIST_DIR }}/${{ env.DIST_ARCHIVE }}
           if-no-files-found: error
         timeout-minutes: 5
       - name: Release
@@ -62,11 +62,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           fail_on_unmatched_files: true
-          files: |
-            libvterm-${{ env.PVR }}.x86_64/dist/libvterm/libvterm0/libvterm0-${{ env.PVR }}.tar.xz
-            libvterm-${{ env.PVR }}.x86_64/dist/libvterm/libvterm-${{ env.PVR }}-src.tar.xz
-            libvterm-${{ env.PVR }}.x86_64/dist/libvterm/libvterm-devel/libvterm-devel-${{ env.PVR }}.tar.xz
-            libvterm-${{ env.PVR }}.x86_64/dist/libvterm/libvterm-debuginfo/libvterm-debuginfo-${{ env.PVR }}.tar.xz
-            libvterm-${{ env.PVR }}.x86_64/dist/libvterm/libvterm-bin/libvterm-bin-${{ env.PVR }}.tar.xz
+          files: ${{ env.DIST_DIR }}/${{ env.DIST_ARCHIVE }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
